fix: scroll down and message to replay overlapping solved

--- a/src/components/Chat/ChatInterface.module.css
+++ b/src/components/Chat/ChatInterface.module.css
@@ -131,12 +131,15 @@
   left: 50%;
   transform: translate(-50%, -150%);
   background-color: gray;
-  border: 1px solid black;
   fill: black;
   border-radius: 50px;
   padding: 0.3rem;
   cursor: pointer;
   display: none;
+}
+
+.chat-body:has(.message-to-replay) .scroll-down-icon {
+  transform: translate(-50%, -300%);
 }
 
 .scroll-down-icon.display {
